# cleantest-agent

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  OPEN-SOURCE-PREP.md  README.md  main.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  publish.yml
cleantest_agent/: __init__.py  data_loader.py  llm_client.py  parser_utils.py  pipeline.py  report_generator.py
cleantest_agent/data/: noise_modifier_fm.txt
data/: README.md
docs/: HERO-IMAGE-PROMPT.md  PYPI-PUBLISHING.md  RELEASE-NOTES-v0.1.0.md  RELEASE-NOTES-v0.1.1.md  code-assistant-guide.md  skill-distribution-guide.md  training-on-baidu-aistudio.md
docs/assets/: .gitkeep
docs/figures/: README.md  build-figures.sh  component-diagram.tex
experiments/: main-final.ipynb  run_baselines.py  simulate_baselines.py
experiments/results/: baseline_results.json  experiment_summary.md  labeled_samples.csv  reflection_results.json  run_log.txt
experiments/results/coverage_run/: coverage_sweep.json  eval_trajectory.json  metrics.jsonl  run_log.txt  summary.md  test_metrics.json  test_threshold_sweep.json  training_metrics.json
experiments/results/full_run/: env_info.md  filtered_data.sample.csv  noise_report.json  run_log.txt  summary.md
output/full_run/: noise_report.json  summary.md
output/full_run_v2/: noise_report.json  summary.md
output/sample_5000_run/: noise_report.json  summary.md
ppt/: PPT大纲.md  build-deck-buaa.py  build-deck.sh  slides-marp.md  slides.md
report/: compile-and-cache.sh  main.tex  main.tex.bak  references.bib
skills/cleantest-coverage-filter/: SKILL.md
skills/cleantest-coverage-filter/references/: model-card.md
skills/cleantest-coverage-filter/scripts/: coverage_predictor.py  evaluate_model.py  prepare_data.py  train_model.py  train_qwen_baidu.sh
skills/cleantest-coverage-filter/scripts_paddle/: evaluate_model.py  prepare_data.py  train_model.py  train_qwen_baidu.sh
skills/cleantest-pipeline/: SKILL.md
skills/cleantest-pipeline/references/: pipeline-schema.json
skills/cleantest-relevance-filter/: SKILL.md
skills/cleantest-relevance-filter/references/: relevance-criteria.md
skills/cleantest-relevance-filter/scripts/: llm_relevance.py  relevance_filter.py
skills/cleantest-syntax-filter/: SKILL.md
skills/cleantest-syntax-filter/references/: noise_modifier_fm.txt.README  noise_rules.md
skills/cleantest-syntax-filter/scripts/: syntax_filter.py
src/: __init__.py  llm_client.py  parser_utils.py  pipeline.py
tests/: test_coverage_filter.py  test_pipeline.py  test_relevance_filter.py  test_report.py  test_syntax_filter.py
tests/fixtures/: sample_clean.csv  sample_noisy.csv
