[build-system]
# setuptools >= 77 is required for the PEP 639 `license = "MIT"` /
# `license-files = [...]` syntax used below.
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cleantest-agent"
version = "0.1.0"
description = "Rule-first three-filter pipeline for cleaning unit-test training data, packaged as four SKILL.md skills."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Yong Yang", email = "yang_qhd@buaa.edu.cn" },
]
keywords = [
    "unit-test",
    "data-quality",
    "test-generation",
    "agent-skills",
    "skill-md",
    "methods2test",
    "tree-sitter",
    "aho-corasick",
    "code-analysis",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tree-sitter>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "pandas>=2.0",
    "openai>=1.0",
    "tqdm>=4.60",
    "pyahocorasick>=2.0",
]

[project.optional-dependencies]
coverage = [
    "transformers>=4.40.0",
    "torch>=2.1",
    "datasets>=2.14",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "huggingface-hub>=0.23",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage      = "https://github.com/jimmy0717/cleantest-agent"
Repository    = "https://github.com/jimmy0717/cleantest-agent"
Documentation = "https://github.com/jimmy0717/cleantest-agent#readme"
Issues        = "https://github.com/jimmy0717/cleantest-agent/issues"
Changelog     = "https://github.com/jimmy0717/cleantest-agent/releases"
Paper         = "https://github.com/jimmy0717/cleantest-agent/releases/download/v0.1.0/main.pdf"

[project.scripts]
cleantest = "cleantest_agent.pipeline:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["cleantest_agent*"]
exclude = ["tests*", "experiments*", "skills*", "data*", "docs*"]

[tool.setuptools.package-data]
cleantest_agent = ["data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", "build", "dist"]
